--- a/League champion stat viewer/League champion stat viewer.csproj
+++ b/League champion stat viewer/League champion stat viewer.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Images\loading_gif.gif" />
+    <None Remove="Images\loading_gif2.gif" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,9 @@
 
   <ItemGroup>
     <Resource Include="Images\loading_gif.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\loading_gif2.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
